[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-test"
version = "0.1.0"
description = "Python wrapper around the mcp-test CLI for MCP server validation"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1", "ruff>=0.4"]

[project.entry-points.pytest11]
mcp_test = "mcp_test.pytest_plugin"

[project.scripts]
mcp-test-py = "mcp_test.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_test*"]
