[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-check"
version = "0.1.0"
description = "Python wrapper around the mcp-check CLI for MCP server validation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mcp-check contributors" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "testing",
    "conformance",
    "pytest",
    "json-rpc",
]

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1", "ruff>=0.4"]

[project.entry-points.pytest11]
mcp_check = "mcp_check.pytest_plugin"

[project.scripts]
mcp-check-py = "mcp_check.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_check*"]
