[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-probe"
version = "0.1.0"
description = "Python wrapper around the mcp-probe CLI for MCP server validation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark", email = "mark@ndg.dev" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "testing",
    "conformance",
    "ai-agents",
    "pytest",
    "json-rpc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/markndg/mcp-probe"
Repository = "https://github.com/markndg/mcp-probe"
"Bug Tracker" = "https://github.com/markndg/mcp-probe/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1", "ruff>=0.4"]

[project.entry-points.pytest11]
mcp_probe = "mcp_probe.pytest_plugin"

[project.scripts]
mcp-probe-py = "mcp_probe.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_probe*"]
