[package]
name = "mcp-check"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for MCP server testing and validation"

[[bin]]
name = "mcp-check"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mcp-check-core = { path = "../mcp-check-core" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
