[package]
name = "mcp-probe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "mcp_probe_core"

[[bin]]
name = "mcp_probe_fake_server"
path = "src/bin/fake_server.rs"

[dependencies]
jsonschema = { version = "0.46", default-features = false }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
