[package]
name = "mcp-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for MCP server testing and validation"

[[bin]]
name = "mcp-test"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mcp-test-core = { path = "../mcp-test-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
